--- a/Explainable_Techniques.ipynb
+++ b/Explainable_Techniques.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMiwXucZKzENkvXUk4lo7or",
+      "authorship_tag": "ABX9TyMHw14bCDYtslY8bbPMx/Tl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,26 @@
       "metadata": {
         "id": "8mTkerH-iG5e"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Cloning the repo:"
+      ],
+      "metadata": {
+        "id": "7XFSFwIilRBF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/calicartels/Explainable-Techniques-LIME.git"
+      ],
+      "metadata": {
+        "id": "qtQp7KUslULF"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -104,7 +124,7 @@
         "model = InceptionV3(weights='imagenet')\n",
         "\n",
         "# Loading an image (using a sample class here, dalmatian)\n",
-        "img_path = '/content/dalmation.jpeg'\n",
+        "img_path = \"/content/Explainable-Techniques-LIME/dalmation.jpeg\"\n",
         "img = image.load_img(img_path, target_size=(299, 299))\n",
         "img_array = image.img_to_array(img)\n",
         "img_array = np.expand_dims(img_array, axis=0)\n",
@@ -171,6 +191,18 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\t1.\tLeft Side (LIME Explanation): The original image with important regions (superpixels) overlaid.\n",
+        "\t2.\tRight Side (Superpixels Alone): A grayscale image where only the selected superpixels are highlighted, making it easier to understand which parts of the image the model focused on.\n",
+        "\n",
+        "This visualization provides another layer of insight by isolating the important regions in the image that LIME considers influential for the prediction.\n"
+      ],
+      "metadata": {
+        "id": "ByRvAc1emJad"
+      }
     },
     {
       "cell_type": "markdown",
